--- a/web/emotivaRm100.html
+++ b/web/emotivaRm100.html
@@ -1,4 +1,4 @@
-<div class="section" style="padding-top: 0; padding-bottom: 0;">
+<div class="defaultFont">
     <div class="panel panel-default">
         <div class="panel-body">
             <table style="width: 100%;">
@@ -30,19 +30,27 @@
                         <table class="buttonGrid" style="margin-left: 20px;">
                             <tr>
                                 <td>
-                                    <div class="circleButton" ng-click="panel.callDeviceService(component, 'hdmi1'); $event.stopPropagation()">1
+                                    <div class="circleButton"
+                                         ng-click="panel.callDeviceService(component, 'hdmi1'); $event.stopPropagation()">
+                                        1
                                     </div>
                                 </td>
                                 <td>
-                                    <div class="circleButton" ng-click="panel.callDeviceService(component, 'hdmi2'); $event.stopPropagation()">2
+                                    <div class="circleButton"
+                                         ng-click="panel.callDeviceService(component, 'hdmi2'); $event.stopPropagation()">
+                                        2
                                     </div>
                                 </td>
                                 <td>
-                                    <div class="circleButton" ng-click="panel.callDeviceService(component, 'hdmi3'); $event.stopPropagation()">3
+                                    <div class="circleButton"
+                                         ng-click="panel.callDeviceService(component, 'hdmi3'); $event.stopPropagation()">
+                                        3
                                     </div>
                                 </td>
                                 <td>
-                                    <div class="circleButton" ng-click="panel.callDeviceService(component, 'hdmi4'); $event.stopPropagation()">3
+                                    <div class="circleButton"
+                                         ng-click="panel.callDeviceService(component, 'hdmi4'); $event.stopPropagation()">
+                                        3
                                     </div>
                                 </td>
                             </tr>
