Default font set.

--- a/web/emotivaRm100.html
+++ b/web/emotivaRm100.html
@@ -1,4 +1,4 @@
-<div class="defaultFont">
+<div class="section" style="padding-top: 0; padding-bottom: 0;">
     <div class="panel panel-default">
         <div class="panel-body">
             <table style="width: 100%;">
