Autodiscovery for Sniffer added.

--- a/web/emotivaRm100.html
+++ b/web/emotivaRm100.html
@@ -5,11 +5,11 @@
                 <tr valign="top">
                     <td style="width: 50%; text-align: center;">
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'standby')"><i
-                                class="fa fa-power-off"></i></div>
+                                class="icon sl-minus-2"></i></div>
                     </td>
                     <td style="width: 50%; text-align: center;">
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'on')"><i
-                                class="fa fa-power-off"></i></div>
+                                class="icon sl-remote"></i></div>
                     </td>
                 </tr>
             </table>
@@ -20,7 +20,7 @@
     <div class="panel panel-default">
         <div class="panel-heading">
             <h4 class="panel-title">
-                Mode
+                HDMI Channel
             </h4>
         </div>
         <div class="panel-body">
