--- a/web/irSniffer.html
+++ b/web/irSniffer.html
@@ -5,7 +5,7 @@
     </tr>
     <tr>
         <td><label>IP Address</label></td>
-        <td>{{component.configuration.hostname}}</td>
+        <td>{{component.configuration.host}}</td>
     </tr>
     <tr>
         <td><label>Last Code</label></td>
