--- a/web/emotivaRm100.html
+++ b/web/emotivaRm100.html
@@ -1,7 +1,7 @@
 <div class="section" style="padding-top: 0; padding-bottom: 0;">
     <div class="panel panel-default">
         <div class="panel-body">
-            <div style="text-align: center; margin-bottom: 1em;">
+            <div style="text-align: center;">
                 <div class="buttonGroup" style="display: inline-block;">
                     <div style="display: table;">
                         <div style="display: table-row; vertical-align: middle;">
